--- a/package.json
+++ b/package.json
@@ -7,17 +7,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "native-base": "2.7.0",
     "react": "16.3.1",
-    "react-native": "0.55.4",
-    "native-base": "2.6.0"
+    "react-native": "^0.57.5",
+    "react-native-elements": "^0.19.1",
+    "react-navigation": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel-eslint": "^9.0.0",
     "babel-jest": "23.0.1",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "23.0.1",
-    "react-test-renderer": "16.3.1"
+    "babel-preset-react-native": "^4.0.1",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "metro-react-native-babel-preset": "^0.49.2",
+    "react-test-renderer": "^16.6.3"
   },
-  "jest": {
-    "preset": "react-native"
+  "resolutions": {
+    "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3"
   }
 }
