--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.3.1",
     "react-native": "^0.57.5",
     "react-native-elements": "^0.19.1",
+    "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.0"
   },
   "devDependencies": {
